=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_01-dev

document PerlSetVar [Eric Cholet <cholet@logilune.com>]

document the fact that $r->dir_config handles keys in a
case insensitive manner [Ken Williams <ken@forum.swarthmore.edu>]

avoid logging "rwrite returned -1" multiple times in the
same request [Eric Cholet <cholet@logilune.com>]

bugfix in write_client() when running under APACHE_SSL
[Michael Douglass <mikedoug@staff.texas.net>]

document the fact that $r->connection->user can be used to set
the authenticated user name [Joshua Gerth <jgerth@ptdcs2.ra.intel.com>]

document the fact that $r->uri sets/gets the URI minus the query string,
not the complete URI [Andrei A. Voropaev <andrei@securities.com>]

fixed the failure of t/modules/file test in 'make test' suit by untainting
the $ENV{PATH} in ./t/net/perl/file.pl [Stas Bekman <sbekman@iname.com>]

added the Apache::GTopLimit to MANIFEST and thus to distribution [Stas
Bekman <sbekman@iname.com>]

Apache::RegistryLoader::handler was rewritten to allow a better
diagnostics of scripts preloading problems. [Stas Bekman 
<sbekman@iname.com>]

document the fact that $r->args can be used to set the query string
as well as get it [Andrei A. Voropaev <andrei@securities.com>]

add $r->connection->fileno, provides the client file descriptors. This
can be used to detect client disconnect without doing any I/O, e.g. using
IO::Select [Eric Cholet <cholet@logilune.com>]

if $r->bytes_sent has not been calculated, then do so before returning
the value.  thanks to Dirk Melchers for the spot

ensure that all -I directories printed by Apache::src actually exist

don't assume $uri =~ /$path_info$/ in Apache::Registry/PerlRun
[Jonas Liljegren <jonas@paranormal.o.se>]

/D "_WINSOCK2API_" for 1.3.9/win32 [Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

fix segfault when using Limit in <Perl> sections